[role="lead"]
Scopri le novità della gestione Cloud Volumes ONTAP in BlueXP.

I miglioramenti descritti in questa pagina sono specifici delle funzionalità di BlueXP che consentono la gestione di Cloud Volumes ONTAP. Per scoprire le novità del software Cloud Volumes ONTAP, https://docs.netapp.com/us-en/cloud-volumes-ontap-relnotes/index.html["Vai alle Note di rilascio di Cloud Volumes ONTAP"^].



== 12 marzo 2025



=== Nuove regioni supportate per le implementazioni di zone di disponibilità multiple in Azure

Le seguenti regioni ora supportano le implementazioni ha di zone di disponibilità multiple in Azure per Cloud Volumes ONTAP 9.12.1 GA e versioni successive:

* Stati Uniti centrali
* US Gov Virginia (Regione del Governo degli Stati Uniti - Virginia)


Per un elenco di tutte le regioni, fare riferimento alla https://bluexp.netapp.com/cloud-volumes-global-regions["Mappa delle regioni globali sotto Azure"^] .



== 10 marzo 2025



=== Creazione di macchine virtuali di storage automatizzata tramite le API in Azure

Ora puoi utilizzare le API di BlueXP  per creare, rinominare ed eliminare macchine virtuali storage di servizi dati aggiuntivi per Cloud Volumes ONTAP in Azure. L'utilizzo delle API automatizza il processo di creazione della VM di storage, includendo la configurazione delle interfacce di rete richieste, delle LIF e di una LIF di gestione, se devi utilizzare una VM di storage per scopi di gestione.

https://docs.netapp.com/us-en/bluexp-cloud-volumes-ontap/task-managing-svms-azure.html["Gestisci le macchine virtuali dello storage di distribuzione dei dati per Cloud Volumes ONTAP in Azure"^]



== 6 marzo 2025



=== Cloud Volumes ONTAP 9.16.1 GA

Ora puoi utilizzare BlueXP  per implementare e gestire la release della disponibilità generale di Cloud Volumes ONTAP 9.16.1 in Azure e Google Cloud. Tuttavia, questa versione non è disponibile per l'implementazione e l'aggiornamento in AWS.
