@@ -5360,11 +5360,6 @@ Massimizza l'efficienza. Visualizza le metriche di efficienza dello storage e id
   <block id="7fc21546461474a1cc543852dc120330" category="paragraph">In caso di problemi durante l'avvio dell'istanza di Cloud Volumes ONTAP, esaminare il messaggio di errore. È inoltre possibile selezionare l'ambiente di lavoro e fare clic su Re-create environment (Crea ambiente).</block>
   <block id="d036b4a2aa80729ab508e1851458f506" category="cell">Scegli le credenziali AWS e l'abbonamento al marketplace da utilizzare con questo sistema Cloud Volumes ONTAP. Fare clic su *Add Subscription* (Aggiungi abbonamento) per associare le credenziali selezionate a un nuovo abbonamento AWS Marketplace. L'abbonamento può essere per un contratto annuale o per pagare Cloud Volumes ONTAP a una tariffa oraria. Se hai acquistato una licenza direttamente da NetApp (Bring Your Own License (BYOL)), non è richiesto un abbonamento ad AWS. <block ref="2ae6dc7cea05e6172a8f0e381f70d632" category="inline-link-rx"></block>.</block>
   <block id="fc687f57dc8188e5dad217858c078354" category="section-title">Rotazione della chiave in Cloud Volumes ONTAP</block>
-  <block id="c8f70aa37f5c88b6da2024d42bae9616" category="paragraph">Se si crea una nuova versione della chiave, Cloud Volumes ONTAP utilizza automaticamente la versione più recente della chiave, garantendo la protezione dei dati senza la necessità di aggiornamenti manuali.</block>
-  <block id="7463254e31b93d5b76992c84139a17de" category="list-text">Accedere al vault delle chiavi nel portale Azure.</block>
-  <block id="d6cff41b1c8a33920bc46aba04b89485" category="list-text">Selezionare il tasto che si desidera ruotare.</block>
-  <block id="38b4782700181268adc6819ae7534a0f" category="list-text">Fare clic su *Nuova versione* per generare una nuova versione della chiave.</block>
-  <block id="d35d0e531d2de4587a8bd21e51823f97" category="paragraph">Una volta creata una nuova versione, Cloud Volumes ONTAP rileva e utilizza automaticamente l'ultima versione della chiave per la crittografia.</block>
   <block id="d2a95dd3692cce58be8541add2bc6897" category="paragraph">Sono supportate la maggior parte delle configurazioni. Se si dispone di un sistema Cloud Volumes ONTAP che esegue la versione più recente, è possibile procedere. <block ref="f2e6a88e181ee9519c72412b23fc6e17" category="inline-link-macro-rx"></block>.</block>
   <block id="1a59c4cde0b6364677026791f943ea0f" category="paragraph">In un aggregato, il tiering dei dati deve essere abilitato per poter essere utilizzato su un volume. È necessario conoscere i requisiti per i nuovi volumi e per i volumi esistenti. <block ref="7beee552935977f4dc8f9885d22b65a0" category="inline-xref-macro-rx"></block>.</block>
   <block id="c64796eb83e1bb434daed77e0937d1b4" category="paragraph">BlueXP  crea un archivio di oggetti per i dati cold quando crea il sistema, <block ref="dbb78a2cc39acf14e084217f8235322a" category="inline-xref-macro-rx"></block>. Dopodiché, sarà sufficiente abilitare il tiering dei dati sui volumi (e in alcuni casi <block ref="7f499208f2ff911432bf2cd70bde52dd" category="inline-xref-macro-rx"></block>).</block>
@@ -5802,4 +5797,17 @@ Massimizza l'efficienza. Visualizza le metriche di efficienza dello storage e id
   <block id="7533d0f4870d29edf1d705a15d4f71e3" category="sidebar">Gestione delle macchine virtuali di storage in AWS</block>
   <block id="db5cf7834d39ce63219e28d402aeb9c2" category="sidebar">Gestire le macchine virtuali di storage in Azure</block>
   <block id="137413da40700294b3660243904ade25" category="sidebar">Gestire le macchine virtuali di storage in Google Cloud</block>
+  <block id="5920daf334ecef8057dd1e1d15f6124e" category="doc">Implementazioni in modalità privata abilitate per Cloud Volumes ONTAP 9.14.1</block>
+  <block id="f2035db09bb2be2db0508915fa584149" category="paragraph">Ora puoi implementare Cloud Volumes ONTAP 9.14.1 in modalità privata in AWS, Azure e Google Cloud. La modalità privata è abilitata per implementazioni a nodo singolo e high Availability (ha) di Cloud Volumes ONTAP 9.14.1.</block>
+  <block id="62bd7572081df25dd3f1f52151883c4a" category="inline-link">Scopri le modalità di implementazione di BlueXP</block>
+  <block id="dc748283e7593515df9e8f2759a85349" category="paragraph">Per ulteriori informazioni sulle implementazioni in modalità privata, fare riferimento a <block ref="312f421b6dd5cf62286ecf6a82a8132e" category="inline-link-rx"></block>.</block>
+  <block id="210dc676779eae6698e4064fd965bda8" category="paragraph">Devi configurare le chiavi di crittografia nel portale di Azure. Per informazioni sulla configurazione dei tasti e sull'impostazione della rotazione dei tasti, fare riferimento ai seguenti argomenti della documentazione di Microsoft Azure:</block>
+  <block id="348c2304e1a6efb529d00b9bacd96a8e" category="inline-link">Configurare la rotazione automatica della chiave crittografica in Azure Key Vault</block>
+  <block id="f4d57411fbf6c0075178b1e3767b496e" category="list-text"><block ref="f4d57411fbf6c0075178b1e3767b496e" category="inline-link-rx"></block></block>
+  <block id="881f8c1da4935c7dbe1f6d696a16cd9c" category="inline-link">Azure PowerShell: Abilitare le chiavi gestite dal cliente</block>
+  <block id="4a9f4b73b48b26dea345a1977b58dd51" category="list-text"><block ref="4a9f4b73b48b26dea345a1977b58dd51" category="inline-link-rx"></block></block>
+  <block id="a15076d8f5fd9af7af6dec9ab282588e" category="inline-link">Rotazione della chiave abilitata sul portale Azure</block>
+  <block id="71b5648e677d1a5ebf3d343f3c10eb54" category="admonition">Dopo aver configurato le chiavi, accertarsi di disporre di<block ref="7b90d7bac505d4641bd5cd9a13a09c6c" category="inline-link-rx"></block>, in modo che Cloud Volumes ONTAP possa utilizzare le nuove chiavi.</block>
+  <block id="5b41754d54a59a01d58e45b59544d3a6" category="paragraph">Al momento della creazione e dell'abilitazione di una nuova versione delle chiavi, Cloud Volumes ONTAP rileva e utilizza automaticamente la versione più recente per la crittografia, garantendo la protezione dei dati senza la necessità di aggiornamenti manuali.</block>
+  <block id="5f2734b84896bdabcf7fd3574325d116" category="section-title">28 marzo 2025</block>
 </blocks>
